Started creating parsing context